--- a/Rollers/appsettings.Development.json
+++ b/Rollers/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Auth": {
+    "Issuer": "authApi",
+    "Audience": "authApi",
+    "Secret": "secret234234secret234234secret234234",
+    "TokenLifeTime": "3600"
   }
 }
