--- a/Rollers/appsettings.json
+++ b/Rollers/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth": {
+    "Issuer": "authApi",
+    "Audience": "authApi",
+    "Secret": "secret234234secret234234secret234234",
+    "TokenLifeTime": "3600"
+  }
 }
