--- a/Rollers/appsettings.json
+++ b/Rollers/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DbSettings": {
+    "MsSqlConnectionString": "Server=(localdb)\\mssqllocaldb;Database=RollersDb;Trusted_Connection=True;",
+  }
 }
