--- a/Rollers/appsettings.json
+++ b/Rollers/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "DbSettings": {
-    "MsSqlConnectionString": "Server=(localdb)\\mssqllocaldb;Database=RollersDb;Trusted_Connection=True;",
+    "MsSqlConnectionString": "Server=(localdb)\\mssqllocaldb;Database=RollersDb;Trusted_Connection=True;"
   }
 }
