--- a/Rollers/appsettings.json
+++ b/Rollers/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "DbSettings": {
-    "MsSqlConnectionString": "Server=localhost,1433;Database=RollersDb;User Id=sa;Password=Very_Strong_Password_12345;Trusted_Connection=False;"
+    "MsSqlConnectionString": "Server=(localdb)\\mssqllocaldb;Database=RollersDb;Trusted_Connection=True;"
   }
 }
