added edit, delete, likes and dislikes in comments; added map (manager, controller, view, js, css)

--- a/Rollers/appsettings.json
+++ b/Rollers/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "GoogleMapApiKey": "AIzaSyBhw8SGIvP9F95IJxjhMWm62OATXgLF8Lo",
   "DbSettings": {
     "MsSqlConnectionString": "Server=(localdb)\\mssqllocaldb;Database=RollersDb;Trusted_Connection=True;"
   }
